--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;    
-    min-width: 960px;    
+    min-width: 960px;
+    font-family: Roboto, Arial, san-serif;    
 }
 
 a {
@@ -35,10 +36,35 @@ input[type="radio"].visually-hidden {
     padding: 0 10px;
 }
 
+.page-header {
+    min-height: 545px;
+    background: lightgrey;
+    box-sizing: border-box;
+}
+
+.page-header__logo {
+    display: block;
+    padding-top: 50px;
+    
+}
+
+.main-navigation {
+    font-family: inherit;
+    font-size: 16px;
+    line-height: 30px;
+    text-align: left;
+}
+
 .main-navigation__list {
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
+    padding-left: 200px;
+    padding-right: 
 }
 
 .main-navigation ul {
     list-style: none;
-}
+} 
