--- a/css/style.css
+++ b/css/style.css
@@ -45,39 +45,42 @@ input[type="radio"].visually-hidden {
 .page-header__logo {
     display: block;
     padding-top: 50px;
-    width: 165px;
 }
 
 .main-navigation {
     font-family: inherit;
-    font-size: 16px;
-    line-height: 30px;
-    text-align: left;
     box-sizing: border-box;
-    
+    display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 .main-navigation__list {
+    font-family: inherit;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: left;
+    line-height: 30px;
     display: flex;
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
     width: 800px;
     display: flex;
-    justify-content: flex-end;
-    
+    justify-content: flex-start;
+    margin-top: 75px;   
 }
 
-.main-navigation ul {
-    margin: 0;
+.main-navigation__list a {
+    font-family: inherit;
+    text-transform: uppercase;
+    font-size: 16px;
+    color: #000;
+    text-align: left;
+    line-height: 30px;
 }
 
 .main-navigation li {
-    list-style: none;
-    padding: 10px 0;
-    padding-left: 30px;
-    
-} 
-.main-navigation li:last-child {
-    padding-left: 280px;
+    list-style: none;    
 }
