--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;    
-    min-width: 1140px;
+    min-width: 1440px;
     font-family: Roboto, Arial, san-serif;    
 }
 
@@ -31,7 +31,7 @@ input[type="radio"].visually-hidden {
 }
 
 .container {
-    width: 1120px;
+    width: 1420px;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -53,13 +53,24 @@ input[type="radio"].visually-hidden {
     display: flex;
 }
 
-.main-navigation {
-    font-family: inherit;
+.main-navigation {    
     box-sizing: border-box;
     width: 800px;
     display: flex;
     flex-wrap: wrap;
     margin-top: 80px;
+    margin-left: 203px;
+    vertical-align: middle;
+}
+
+.main-navigation a {
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+    color: #000000;
+    text-transform: uppercase;
 }
 
 div, p, nav, li, a {
