--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,6 @@ input[type="radio"].visually-hidden {
 
     margin-top: 76px;
     margin-left: 201px;
-    
-
 }
 
 .main-navigation a {
@@ -86,6 +84,18 @@ input[type="radio"].visually-hidden {
     margin-left: 286px;
 }
 
+.features {
+    font-family: inherit;
+    width: 380px;
+    padding: 0;
+    margin: 0;
+    margin-top: 77px;
+}
+
+.features h1 {
+    font-size: 55px;
+    line-height: 55px;
+}
 
 div, p, nav, li, a {
     outline: red solid 1px;
