--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,31 @@ input[type="radio"].visually-hidden {
 }
 
 .button {
-    background: #fb565a;
-    color: #fff;
+    display: block;
+    width: 240px;
+    padding: 13px 0;
+  
+    font-size: 16px;
+    line-height: 18px;
+    color: #ffffff;
     text-transform: uppercase;
-    font-family: Roboto, Arial, san-serif;
-    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+  
+    background-color: #fb565a;
+    border-radius: 3px;
+    border: none;
+}
+
+.button:hover,
+.button:focus {
+    background-color: #e74246;
+}
+
+.button:active {
+    background-color: #d7373b;
+    color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 3px rgba(0, 0, 0, 0.1) inset;
 }
 
 .page-header {
@@ -91,47 +111,125 @@ input[type="radio"].visually-hidden {
     margin-left: 286px;
 }
 
-.features {
-    font-family: inherit;
-    width: 380px;
-    padding: 0;
-    margin: 0;
-    margin-top: 77px;
+.slider {
+    position: relative;    
+    background-color: #eeeeee;
 }
-
-.features h1 {
+  
+.slider-controls {
+    position: absolute;
+    left: 50%;
+    bottom: 104px;
+    z-index: 100;
+    
+    width: 160px;
+    height: 18px;
+  
+    text-align: center;
+    font-size: 0;
+    transform: translateX(-50%);
+}
+  
+.slider-controls label {
+    position: relative;
+    
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    padding: 8px;
+    
+    border-radius: 50%;
+    cursor: pointer;
+}
+  
+.slider-controls label::after {
+    content: "";
+    
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    z-index: 1;
+    
+    width: 18px;
+    height: 18px;
+    
+    background: #ffffff;
+    
+    border-radius: 50%;
+}
+  
+.slider-list {
+    margin: 0;
+    padding: 0;    
+    list-style: none;
+}
+  
+.slider-item {
+    display: none;
+    padding: 78px 0 80px 0;
+}
+  
+.slider-item:nth-child(1) {
+    background-image: url("../img/slide1.png");
+    background-repeat: no-repeat;
+    background-position: 93% 18px;
+}
+  
+.slider-item:nth-child(2) {
+    background-image: url("../img/slide2.png");
+    background-repeat: no-repeat;
+    background-position: 100% 0;
+}
+  
+.slider-item:nth-child(3) {
+    background-image: url("../img/slide3.png");
+    background-repeat: no-repeat;
+    background-position: 100% 20px;
+}
+  
+#product-1:checked ~ .slider-list .slider-item:nth-child(1) {
+    display: block;
+}
+  
+#product-2:checked ~ .slider-list .slider-item:nth-child(2) {
+    display: block;
+}
+  
+#product-3:checked ~ .slider-list .slider-item:nth-child(3) {
+    display: block;
+}
+  
+#product-1:checked ~ .slider-controls .slider-controls-item--1::before,
+#product-2:checked ~ .slider-controls .slider-controls-item--2::before,
+#product-3:checked ~ .slider-controls .slider-controls-item--3::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 2;
+    width: 4px;
+    height: 4px;
+    margin: -4px;
+    background-color: inherit;
+    border: 2px solid #c1c1c1;
+    border-radius: 50%;
+}
+  
+.slider-item h3 {
+    max-width: 600px;
+    margin: 0;
+    margin-bottom: 27px;
+    
     font-size: 55px;
     line-height: 55px;
-    padding: 0;
+    font-weight: 500;
+}
+  
+.slider-item p {
+    max-width: 430px;
     margin: 0;
+    margin-bottom: 38px;
 }
-
-.features p {
-    font-size: 16px;
-    line-height: 24px;
-    padding: 0;
-    margin: 0;
-    margin-top: 27px;
-}
-
-.features__button {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 240px;
-    height: 50px;
-    line-height: 18px;
-    margin-top: 40px;
-}
-
-.slide {
-    display: none;
-}
-
-.slide:nth-child(1) {
-    display: block;
-  }
 
 div, p, nav, li, a {
     outline: red solid 1px;
