--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,9 @@ input[type="radio"].visually-hidden {
 }
 
 .container {
-    width: 1160px;
+    width: 1180px;
     margin: 0 auto;
-    padding: 0 auto;
+    padding: 0 10px;
 }
 
 .button {
@@ -89,7 +89,7 @@ input[type="radio"].visually-hidden {
     align-items: flex-start;
 
     margin-top: 76px;
-    margin-left: 200px;
+    margin-left: 201px;
 }
 
 .main-navigation a {
