--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,10 @@ input[type="radio"].visually-hidden {
 }
 
 .container {
-    width: 1180px;
+    width: 1200px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .button {
@@ -66,7 +67,7 @@ input[type="radio"].visually-hidden {
 
 .page-header {
     min-height: 545px;
-    background: lightgrey;
+    background: #eeeeee;
 }
 
 .wrapper-header {
@@ -89,7 +90,7 @@ input[type="radio"].visually-hidden {
     align-items: flex-start;
 
     margin-top: 76px;
-    margin-left: 201px;
+    margin-left: 200px;
 }
 
 .main-navigation a {
@@ -172,7 +173,7 @@ input[type="radio"].visually-hidden {
 .slider-item:nth-child(1) {
     background-image: url("../img/slide1.png");
     background-repeat: no-repeat;
-    background-position: 93% 18px;
+    background-position: 100% 0px;
 }
   
 .slider-item:nth-child(2) {
@@ -218,7 +219,7 @@ input[type="radio"].visually-hidden {
 .slider-item h3 {
     max-width: 600px;
     margin: 0;
-    margin-bottom: 27px;
+    margin-bottom: 30px;
     
     font-size: 55px;
     line-height: 55px;
@@ -228,7 +229,7 @@ input[type="radio"].visually-hidden {
 .slider-item p {
     max-width: 430px;
     margin: 0;
-    margin-bottom: 38px;
+    margin-bottom: 50px;
 }
 
 div, p, nav, li, a {
