--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,43 @@ input[type="radio"].visually-hidden {
     margin-bottom: 50px;
 }
 
+.shop ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shop li {
+    width: 300px;
+    padding: 0;
+    margin: 0;
+    margin-right: 100px;
+}
+
+.shop li:last-child {
+    margin-right: 0;
+}
+
+.shop__item:first-child .shop__item--image {
+    width: 300px;
+    height: 146px;
+    background: url(../img/websites.jpg) no-repeat;
+}
+
+.shop__item:nth-child(2) .shop__item--image {
+    width: 300px;
+    height: 146px;
+    background: url(../img/apps.jpg) no-repeat;
+}
+
+.shop__item:last-child .shop__item--image {
+    width: 300px;
+    height: 146px;
+    background: url(../img/presentations.jpg) no-repeat;
+}
+
 div, p, nav, li, a {
     outline: red solid 1px;
 }
