--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,20 @@ input[type="radio"].visually-hidden {
     width: 420px;
 }
 
+.condition a {
+    margin-left: 46px;
+}
+
+.condition h3 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-left: 62px;
+}
+
 
 div, p, nav, li, a {
     outline: red solid 1px;
